pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: rushi-rushi
  labels:
    app: rushi_app
spec:
  containers:
  - name: rushi-container
    image: nginx:latest
    ports:
      - containerPort: 80
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
      requests:
        memory: "64Mi"
        cpu: "250m"
