deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rushi-deployment    
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  selector:
    matchLabels:
      app: rushi_app
  template: 
    metadata:
      labels:
        app: rushi_app
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "250m"
            memory: "256Mi"

---

#service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rushi-service
spec:
  type: NodePort
  selector:
    app: rushi_app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30884
