horizontalPodAutoscaler.yaml
#service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rushi-service
spec:
  selector:
    app: rushi_app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
