service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rushi-app-svc
spec:
  type: NodePort
  selector:
    app: rushi_app
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30883
