statefullset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rushi-statefulset
spec:
  serviceName: rushi-service
  replicas: 3
  selector:
    matchLabels:
      app: rushi_app
  template:
    metadata:
      labels:
        app: rushi_template
    spec:
      containers:
      - name: rushi-container
        image: nginx:latest
        ports:
        - containerPort: 80
          targetPort: 80

---

#service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rushi-service
spec:
  selector:
    app: rushi_app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
