ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rushi-ingress
spec:
  rules:
  - host: rushi.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rushi-service
            port:
              number: 80
